# SOCLOOM

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assets/: README.md
backend/aegis/: __init__.py  config.py  database.py  main.py
backend/aegis/agents/: llm.py  soc_analyst.py
backend/aegis/api/: routes.py
backend/aegis/cli/: main.py
backend/aegis/detection/: ml.py  rules.py
backend/aegis/intel/: enrichment.py
backend/aegis/mitre/: mapper.py
backend/aegis/models/: alert.py  schemas.py
backend/aegis/services/: pipeline.py
backend/aegis/skills/: registry.py
data/: sample_logs.json
docs/: API.md  ARCHITECTURE.md  CLI.md  DEPLOYMENT.md  MCP.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: api.js
mcp-server/: server.py
scripts/: traffic_simulator.py
