[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socloom"
version = "1.0.0"
description = "SOCloom — Weave 800+ security skills into AI-powered SOC operations with MITRE ATT&CK mapping and MCP integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "SOCloom Contributors" }]
keywords = ["soc", "cybersecurity", "threat-hunting", "mitre-attack", "mcp", "ai-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "joblib>=1.4.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "websockets>=14.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.1.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[project.scripts]
socloom = "aegis.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend/aegis"]

[tool.ruff]
line-length = 100
target-version = "py311"